@startuml

title Classes - Class Diagram


class "eleve"{
**[PK] int : idEtudiant**
string : numéro étudiant
string : string
string : prenom
}

class "groupe"{
**[PK] int : idGroupe**
string : nom
}

class CampagneMesure{
**[PK] int : idCampagne**
string : appareilUtilise
string : Nom
date : Date de début relève
bool : capteur température
bool : capteur CO2
bool : capteur O2
bool : capteur luminosité
bool : capteur humidité
time : intervalle de relève
float : volume
int : Durée en seconde
}

class "Mesure"{
//[FK] int : idCampagne//
float : humidité
float : luminosité
float : CO2
float : O2
float : Température
datetime : Date et heure de releve

}

Class "parametre"{
int : intervalle de suppression donnée en jour
string : mot de passe
//[FK] int : idQuestion de securité 1//
string : reponse question de securité 1
//[FK] int : idQuestion de securité 2//
string : reponse question de securité 2
//[FK] int : idQuestion de securité 3//
string : reponse question de securité 3
string : nomAdmin
strnig : prenomAdmin
}

class "sujet"{
**[PK] int : idSujet**
string : nom 
string : type
}

class "travail"{
**[PK] int : idTravail**
//[FK] int : idSujet//
string : cléDaccès
}

class "EleveParticipeTravail"{
//**[PK] [FK] int : idEtudiant**//
//**[PK] [FK] int : idTravail**//
}

class EleveAppartientAGroupe{
//**[PK] [FK] int : idEtudiant**//
//**[PK] [FK] int : idGroupe**//
}

class "Commentaire"{
**[PK] int : idCommentaire**
//[FK] int : idCampagne//
string : commentaire
boolean : sentByAdmin
boolean : lu
}

class "QuestionSecurite"{
**[PK] int : idQuestion**
string : question
}


CampagneMesure *-- "0..*" Mesure
groupe o-- eleve
eleve "0..*" --- "0..*" travail
sujet *--  "0..*" travail
travail *-- "0..*" CampagneMesure
CampagneMesure *-- "0..*"Commentaire
parametre "1" -- "1" QuestionSecurite
parametre "1" -- "1" QuestionSecurite
parametre "1" -- "1" QuestionSecurite
(eleve,travail) . EleveParticipeTravail
(eleve,groupe) . EleveAppartientAGroupe


@enduml
